Modifications for HPCC use

--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -1,19 +1,14 @@
-<%-
-  ppn   = num_cores.blank? ? 28 : num_cores.to_i
-  props = case node_type
-          when "hugemem"
-            ":ppn=48"
-          else
-            ":ppn=#{ppn}"
-          end
--%>
----
 batch_connect:
-  template: "basic"
 script:
-  <%- if node_type == "debug" -%>
-  queue_name: "debug"
-  <%- end -%>
   native:
-    resources:
-      nodes: "1<%= props %>"
+    - "-c"
+    - "<%= num_cores %>"
+    - "--mem"
+    - "<%= num_mem %>GB"
+    - "-p"
+    - "<%= auto_queues %>"
+    - "-t"
+    - "<%= runtime %>"
+    <%- unless extra_slurm.empty? -%>
+    - "<%= extra_slurm %>"
+    <%- end -%>
