--- a/view.html.erb
+++ b/view.html.erb
@@ -1,3 +1,5 @@
-<a href="/node/<%= host %>/<%= port %>/" class="btn btn-primary" target="_blank">
-  <i class="fa fa-area-chart"></i> Connect to Galaxy
-</a>
+<form action="/node/<%= host %>/<%= port %>/" method="post" target="_blank">
+  <button class="btn btn-primary" type="submit">
+    <i class="fa fa-eye"></i> Connect to Galaxy
+  </button>
+</form>
