--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -2,6 +2,7 @@
 [[ $(type -t module) == "function" ]] && export -f module
 
 
+
 #Set working directory
 
 <%
@@ -17,52 +18,29 @@ end
 
 %>
 
-DATAROOT=$(readlink <%= working_dir.to_s %> | grep "^/bigdata" | grep -E "(${USER}|shared)$")
-#Check if working directory is a symlink to bigdata or shared (Only really checks for bigdata or shared symlinks. Other symlinks might not work correctly)
-if [ ! -z "${DATAROOT}"  ]; then
-  export DATAROOT="$(readlink <%= working_dir.to_s %>)"
-else
-  export DATAROOT="<%= working_dir.to_s %>"
-fi
+export DATAROOT="<%= working_dir.to_s %>"/.galaxy
 
-export DATAROOT=${DATAROOT}/.galaxy
-#Check if import directory location given
-<%
-
-import_dir = Pathname.new(context.import_dir)
-
-if ! import_dir.exist?
-  import_dir = Pathname.new(ENV['HOME'])
-elsif import_dir.file?
-  import_dir = import_dir.parent
-end
-
-%>
-
-IMPORT_DIR="<%= import_dir.to_s %>"
-
-#If an import directory was not given set it to the database directory
-if [ ${IMPORT_DIR} == ${HOME} ]; then
-  export IMPORT_DIR=${DATAROOT}/import-dir
-else
-  #Check if the import dir is either bigdata or shared directory
-  IMPORT_DIR=$(readlink <%= import_dir.to_s %> | grep "^/bigdata" | grep -E "(${USER}|shared)$")
-  #If the variable is not empty then check if it is a user directory
-  if [ ! -z "${IMPORT_DIR}" ]; then
-    if [ $(echo ${IMPORT_DIR} | grep -c "${USER}" ) -eq 1 ]; then
-      export IMPORT_DIR=$(dirname ${IMPORT_DIR})
-    fi
-  #If import directory is invalid (Some symlink that couldn't be resolved) then just set it to the default import directory
-  else
-    export IMPORT_DIR=${DATAROOT}/import-dir
-  fi 
-fi
- 
 # Find available port to run server on
 export port=$(find_port)
 
-module load galaxy
 
+#Load in modules
+<%- unless context.modules.blank? -%>
+# Purge the module environment to avoid conflicts
+module purge
+
+module load <%= context.extra_modules %>
+
+# Load the required modules
+module load <%= context.modules  %>
+
+# List loaded modules
+module list
+<%- end -%>
+
+
+
+module load galaxy
 
 # Define Galaxy Variables
 export GALAXY_PATH="$(dirname $(which run.sh))"
@@ -72,15 +50,33 @@ export EMAIL="${USER}@ondemand.hpcc.ucr.edu"
 export JOB_CONFIG_FILE_PATH="${PWD}/job_conf.xml"
 export JOB_RESOURCE_PARAMS_CONF_FILE_PATH="${PWD}/job_resource_params_conf.xml"
 export WORKFLOW_RESOURCE_PARAMS_CONF_FILE_PATH="${PWD}/workflow_resource_params_conf.xml"
-
+export ENVIORNMENT_MODULES_MAPPING_FILE_PATH="${PWD}/environment_modules_mapping.yml"
 
 #For testing local galaxy instances
 #export GALAXY_PATH="<%= BatchConnect::App.from_token(session.token).root.realpath.join("24.1").to_s %>"
 
 echo "GALAXY config file location: '${GALAXY_CONFIG_FILE}'"
 echo "Data location: '${DATAROOT}'"
-echo "Import directory location '${IMPORT_DIR}'"
 
+
+
+#Generare environment modules mapping file
+#extra_modules=(<%= context.extra_modules %>)
+#for module in ${extra_modules}
+#do
+#  (
+#umask 077
+#cat > "${ENVIORNMENT_MODULES_MAPPING_FILE_PATH}" << EOL
+#<?xml version="1.0"?>
+#<tool id="${module}" name="${module}" >
+#  <description>
+#    Please vist our github for examples on how to each this module 
+#    https://github.com/ucr-hpcc/hpcc_slurm_examples
+#   </description>
+#  </tool>
+#EOL
+#  )
+#done
 # Generate Galaxy job configuration file
 (
 umask 077
@@ -154,7 +150,8 @@ galaxy:
   tool_dependency_dir: ${DATAROOT}/database/dependencies
   tool_data_path: ${DATAROOT}/tool-data
   #Import options
-  library_import_dir: ${IMPORT_DIR}
+  library_import_dir: ${DATAROOT}/import-dir/
+  user_library_import_symlink_allowlist: /bigdata,/rhome
   allow_path_paste: true
   #Data manager config options
   enable_data_manager_user_view: true
@@ -167,5 +164,20 @@ galaxy:
   admin_users: ${EMAIL}
   job_config_file: ${JOB_CONFIG_FILE_PATH}
   galaxy_url_prefix: /node/${HOSTNAME}/${port}
+  dependency_resolvers:
+    - type: tool_shed_packages
+    - type: galaxy_packages
+    - type: conda
+    - type: galaxy_packages
+      versionless: true
+    - type: conda
+      versionless: true
+    - type: modules
+      versionless: true
+      modulecmd: /usr/bin/modulecmd
+      modulepath: /opt/linux/rocky/8.x/x86_64/modules
+      find_by: avail
+      prefetch: true
+      default_indicator: "default"
 EOL
 )
