--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -5,6 +5,8 @@ if [ ! -d "${DATAROOT}" ]; then
   echo "Creating galaxy directory..."
   mkdir -p ${DATAROOT}/database/dependencies ${DATAROOT}/tool-data ${DATAROOT}/config ${DATAROOT}/import-dir
   cp -r ${GALAXY_PATH}/tool-data/* ${DATAROOT}/tool-data/
+  ln -s /bigdata ${DATAROOT}/import-dir/bigdata-galaxy
+  ln -s /rhome ${DATAROOT}/import-dir/rhome-galaxy
   chmod 770 ${DATAROOT}
 fi
 
