--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -1,16 +1,5 @@
-#!/usr/bin/env bash
-
-#Creates galaxy directory and sets directory permissions
-if [ ! -d "${DATAROOT}" ]; then
-  echo "Creating galaxy directory..."
-  mkdir -p ${DATAROOT}/database/dependencies ${DATAROOT}/tool-data ${DATAROOT}/config ${DATAROOT}/import-dir
-  cp -r ${GALAXY_PATH}/tool-data/* ${DATAROOT}/tool-data/
-  ln -s /bigdata ${DATAROOT}/import-dir/bigdata-galaxy
-  ln -s /rhome ${DATAROOT}/import-dir/rhome-galaxy
-  chmod 770 ${DATAROOT}
-fi
+#!/usr/bin/bash -l
 
 # Start Galaxy
 echo "Starting up Galaxy..."
 sh ${GALAXY_PATH}/run.sh --no-create-venv --skip-client-build --skip-wheels
-
